--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "husky": "^8.0.0"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
