--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.ts",
     "start": "prisma migrate deploy && node dist/server.js",
     "test": "dotenv -e .env.test prisma migrate deploy & dotenv -e .env.test jest -- -i",
+    "test:coverage": "npm run test:load-envs -- jest -- --coverage --runInBand",
     "test:migration:run": "npm run test:load-envs prisma migrate deploy",
     "test:migration:generate": "npm run test:load-envs prisma migrate dev",
     "dev:migration:run": "npm run dev:load-envs prisma migrate deploy",
@@ -21,8 +22,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20.9.0",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "dotenv": "^16.3.1",
@@ -33,9 +37,12 @@
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-prettier": "^5.0.1",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
